# apertium-fin-eng

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CITATION.cff  Makefile.am  README  README.markdown  TODO  apertium-fin-eng.eng-fin.dix-n.html  apertium-fin-eng.eng-fin.lrx  apertium-fin-eng.eng-fin.rlx  apertium-fin-eng.eng-fin.rtx  apertium-fin-eng.eng-fin.t1x  apertium-fin-eng.eng-fin.t2x  apertium-fin-eng.eng.acx  apertium-fin-eng.eng.dix  apertium-fin-eng.eng.lexc  apertium-fin-eng.eng.twol  apertium-fin-eng.fin-eng.dix  apertium-fin-eng.fin-eng.dix-d.html  apertium-fin-eng.fin-eng.dix-e.html  apertium-fin-eng.fin-eng.dix-g.html  apertium-fin-eng.fin-eng.dix-u.html  apertium-fin-eng.fin-eng.dix-x.html  apertium-fin-eng.fin-eng.dix-y.html  apertium-fin-eng.fin-eng.lrx  apertium-fin-eng.fin-eng.rlx  apertium-fin-eng.fin-eng.rtx  apertium-fin-eng.fin-eng.t1x  apertium-fin-eng.fin-eng.t2x  apertium-fin-eng.fin-eng.t2x.html  apertium-fin-eng.fin-eng.t3x  apertium-fin-eng.fin.lexc  apertium-fin-eng.fin.twol  apertium-fin-eng.pc.in  autogen.sh  configure.ac  modes.xml
dev/: debug2dixesandlexces.bash  diffs-to-eng-ref.sh  europarl-v7.fi-en.ngrams.fi-en.lrx  fiwikt2dix.awk  fiwn2bidix.bash  inconsistency-summary.sh  inconsistency.sh  nouns.wikt.txt  reweight-bidix.py  testvoc.sh  wmt-tranlate.bash  wmt2text.bash
docs/: apertium-fin-eng.eng-fin.dix-d.html  apertium-fin-eng.eng-fin.dix-e.html  apertium-fin-eng.eng-fin.dix-f.html  apertium-fin-eng.eng-fin.dix-g.html  apertium-fin-eng.eng-fin.dix-h.html  apertium-fin-eng.eng-fin.dix-i.html  apertium-fin-eng.eng-fin.dix-j.html  apertium-fin-eng.eng-fin.dix-k.html  apertium-fin-eng.eng-fin.dix-l.html  apertium-fin-eng.eng-fin.dix-m.html  apertium-fin-eng.eng-fin.dix-n.html  apertium-fin-eng.eng-fin.dix-o.html  apertium-fin-eng.eng-fin.dix-q.html  apertium-fin-eng.eng-fin.dix-r.html  apertium-fin-eng.eng-fin.dix-u.html  apertium-fin-eng.eng-fin.dix-v.html  apertium-fin-eng.eng-fin.dix-w.html  apertium-fin-eng.eng-fin.dix-x.html  apertium-fin-eng.eng-fin.dix-y.html  apertium-fin-eng.eng-fin.dix-z.html  apertium-fin-eng.eng-fin.t1x.html  apertium-fin-eng.eng-fin.t2x.html  apertium-fin-eng.eng-fin.t3x.html  apertium-fin-eng.fin-eng.dix-b.html  apertium-fin-eng.fin-eng.dix-c.html  apertium-fin-eng.fin-eng.dix-d.html  apertium-fin-eng.fin-eng.dix-e.html  apertium-fin-eng.fin-eng.dix-f.html  apertium-fin-eng.fin-eng.dix-g.html  apertium-fin-eng.fin-eng.dix-i.html  apertium-fin-eng.fin-eng.dix-j.html  apertium-fin-eng.fin-eng.dix-n.html  apertium-fin-eng.fin-eng.dix-o.html  apertium-fin-eng.fin-eng.dix-q.html  apertium-fin-eng.fin-eng.dix-r.html  apertium-fin-eng.fin-eng.dix-u.html  apertium-fin-eng.fin-eng.dix-w.html  apertium-fin-eng.fin-eng.dix-x.html  apertium-fin-eng.fin-eng.dix-y.html  apertium-fin-eng.fin-eng.dix-z.html  (+5 more)
t/: config.sh  latest-pending.results  latest-regression.results
test/: eng-fin-pending-biltrans-expected.txt  eng-fin-pending-chunker-expected.txt  eng-fin-pending-generator-expected.txt  eng-fin-pending-generator-gold.txt  eng-fin-pending-input.txt  eng-fin-pending-interchunk-expected.txt  eng-fin-pending-lex-expected.txt  eng-fin-pending-morph-expected.txt  eng-fin-pending-postchunk-expected.txt  eng-fin-pending-pretransfer-expected.txt  fin-eng-pending-biltrans-expected.txt  fin-eng-pending-generator-expected.txt  fin-eng-pending-generator-gold.txt  fin-eng-pending-input.txt  fin-eng-pending-interchunk-expected.txt  fin-eng-pending-lex-expected.txt  fin-eng-pending-morph-expected.txt  fin-eng-pending-postchunk-expected.txt  fin-eng-pending-pretransfer-expected.txt  fin-eng-regression-biltrans-expected.txt  fin-eng-regression-chunker-expected.txt  fin-eng-regression-generator-expected.txt  fin-eng-regression-generator-gold.txt  fin-eng-regression-input.txt  fin-eng-regression-interchunk-expected.txt  fin-eng-regression-lex-expected.txt  fin-eng-regression-morph-expected.txt  fin-eng-regression-postchunk-expected.txt  fin-eng-regression-pretransfer-expected.txt  tests.json
texts/: fiwiki-jäätelö.text  newstest2018-enfi-ref-ts.fi.text  newstest2018-enfi-src-ts.en.text  newstest2019-enfi-src-ts.en.text  newstest2019-fien-src-ts.fi.text  rautatie.text  story.fin-eng.google.txt  tarina.eng.text  tarina.fin.text  ukkonen.fiwiki.text  undhr.eng.txt  undhr.fin.txt
